# dotfiles

./: .gitignore  .gitmodules  Brewfile  README.md  bashrc  gitconfig  install.conf.yaml  pylintrc  vimrc  zshrc
config/: Brewfile  base16_theme  bashrc  bigqueryrc  chunkwmrc  flake8  gitconfig  gitignore  grip  kitty  muttrc  neovim  neovim_lua  ruff.toml  shellrc  skhdrc  vimrc  yabairc  zsh_plugins  zshrc
jupyter-hub/: pyproject.toml
neovim-python/: pyproject.toml
nvim/: init.lua  stylua.toml
nvim/colorschemes/: aphelion.lua  ayu-dark.lua  catppuccin-mocha.lua  everforest-hard.lua  everforest-harder.lua  everforest-hardest.lua  evernord.lua  fu.lua  glacier.lua  gruvbox-dark-hard.lua  jellybeans.lua  landscape.lua  tomorrow-night-bright.lua
nvim/lsp/: basedpyright.lua  bashls.lua  dockerls.lua  harperls.lua  luals.lua  markdown-oxide.lua  ruff.lua  sqlls.lua  yamlls.lua
nvim/lua/: base16-colorscheme.lua  functions.lua  init.lua  keymaps.lua  lazy_bootstrap.lua  lazy_plugins.lua  lsp.lua  lsp_plugins.lua  mycolour.lua  options.lua  plugins.lua  spell.lua
nvim/lua/config/: keymaps.lua  lazy.lua  lsp.lua  options.lua
nvim/lua/custom/: functions.lua  love_runner.lua  mycolour.lua
nvim/lua/plugins/: autocompletion.lua  colorschemes.lua  conform.lua  copilot.lua  dadbod.lua  fidget.lua  gitsigns.lua  lsp.lua  lualine.lua  molten.lua  obsidian.lua  plenary.lua  telescope.lua  todo-comments.lua  treesitter.lua  zenmode.lua
nvim/lua/telescope/_extensions/: base16_colorpicker.lua
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
terminfo/: kitty.terminfo
vim/: README.md
vim/spell/: en.utf-8.add  en.utf-8.add.spl  nl.utf-8.add
vim/syntax/: tex.vim
yabai/: set_padding.py
